[tool.poetry]
name = "dwpse"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psex = "^0.1.2"
redis = "^4.3.4"
SQLAlchemy = "^1.4.40"
pymongo = "^4.2.0"
psycopg2-binary = "^2.9.3"
mysql-connector = "^2.2.9"
pymssql = "^2.2.5"
PyMySQL = "^1.0.2"
clickhouse-sqlalchemy = "^0.2.1"
pyodbc = "^4.0.34"
elasticsearch = "7.14.0"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
