[tool.poetry]
name = "dwpse"
version = "0.1.0"
description = "A simple, fast and powerful database weak password scanner engine tool was built by antx, which based on psex."
authors = ["antx-code <wkaifeng2007@163.com>"]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.8"
psex = "^0.1.4"
redis = "^4.3.4"
SQLAlchemy = "^1.4.40"
pymongo = "^4.2.0"
psycopg2-binary = "^2.9.3"
mysql-connector = "^2.2.9"
pymssql = "^2.2.5"
PyMySQL = "^1.0.2"
clickhouse-sqlalchemy = "^0.2.1"
pyodbc = "^4.0.34"
elasticsearch = "7.14.0"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
